Rename the FlowSynx.AspNet to the FlowSynx.Client.AspNetCore

--- a/Samples/AspNetCore/AspNetCore.csproj
+++ b/Samples/AspNetCore/AspNetCore.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\FlowSynx.AspNetCore\FlowSynx.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\src\FlowSynx.Client.AspNetCore\FlowSynx.Client.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
