--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -24,7 +24,7 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Build
-      run: dotnet build src/**/project.json --configuration Release /p:Version='${{ inputs.rel_version }}'
+      run: dotnet build --configuration Release /p:Version='${{ inputs.rel_version }}'
 
     - name: Test
       run: dotnet test --configuration Release /p:Version='${{ inputs.rel_version }}' --no-build
