--- a/src/FlowSynx.Client.AspNetCore/FlowSynx.Client.AspNetCore.csproj
+++ b/src/FlowSynx.Client.AspNetCore/FlowSynx.Client.AspNetCore.csproj
@@ -1,17 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Description>This package contains the reference assemblies for developing applications or services using FlowSynx and AspNetCore.</Description>
+		<Company>FlowSynx</Company>
+		<Authors>FlowSynx</Authors>
+		<Copyright>© FlowSynx. All rights reserved.</Copyright>
+		<RepositoryUrl>https://github.com/flowsynx/csharp-sdk</RepositoryUrl>
+		<PackageProjectUrl>http://flowsynx.io</PackageProjectUrl>
+		<PackageTags>FlowSynx</PackageTags>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-  </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)'=='Release'">
+		<DebugSymbols>False</DebugSymbols>
+		<DebugType>None</DebugType>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\FlowSynx.Client\FlowSynx.Client.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\FlowSynx.Client\FlowSynx.Client.csproj" />
+	</ItemGroup>
 
 </Project>
