--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -60,3 +60,5 @@ jobs:
         tag: v${{ inputs.rel_version }}
         name: v${{ inputs.rel_version }}
         body: "This is the v${{ inputs.rel_version }} release of FlowSynx C# SDK"
+        artifacts: "**/*.nupkg"
+        token: ${{ secrets.NUGET_PACKAGE_TOKEN }}
