--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -50,8 +50,8 @@ jobs:
       with:
         name: nugetPackage
 
-    - name: Push package to GitHub packages 
-      run: dotnet nuget push **/*.nupkg --api-key ${{secrets.NUGET_PACKAGE_TOKEN}} --source https://api.nuget.org/v3/index.json
+    #- name: Push package to GitHub packages 
+      #run: dotnet nuget push **/*.nupkg --api-key ${{secrets.NUGET_PACKAGE_TOKEN}} --source https://api.nuget.org/v3/index.json
 
     #Create release
     - name: Create Release
@@ -61,4 +61,4 @@ jobs:
         name: v${{ inputs.rel_version }}
         body: "This is the v${{ inputs.rel_version }} release of FlowSynx C# SDK"
         artifacts: "**/*.nupkg"
-        token: ${{ secrets.NUGET_PACKAGE_TOKEN }}
+        token: ${{secrets.NUGET_PACKAGE_TOKEN}}
