--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
-        tag: v${{ inputs.rel_version }}
+        tag: ${{ inputs.rel_version }}
         name: v${{ inputs.rel_version }}
         body: "This is the v${{ inputs.rel_version }} release of FlowSynx C# SDK"
         artifacts: "**/*.nupkg"
