--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -60,4 +60,4 @@ jobs:
         tag: ${{inputs.rel_version}}
         name: v${{inputs.rel_version}}
         body: "This is the v${{inputs.rel_version}} release of FlowSynx C# SDK"
-        token: ${{secrets.NUGET_PACKAGE_TOKEN}}
+        token: ${{secrets.GITHUB_TOKEN}}
