--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -17,6 +17,14 @@ jobs:
       with:
         fetch-depth: 0 #fetch-depth is needed for GitVersion
 
+    - name: Create Branch
+      uses: peterjgrainger/action-create-branch@v2.2.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      with:
+        branch: 'release-${{ inputs.rel_version }}'
+        sha: '${{ github.event.pull_request.head.sha }}'
+
     #Build/pack the project
     - name: Setup .NET
       uses: actions/setup-dotnet@v3.2.0
