add LicenseExpression and RequireLicenseAcceptance to the project to make it able use license in nuget package #1

--- a/src/FlowSynx.Client.AspNetCore/FlowSynx.Client.AspNetCore.csproj
+++ b/src/FlowSynx.Client.AspNetCore/FlowSynx.Client.AspNetCore.csproj
@@ -12,6 +12,8 @@
 		<PackageProjectUrl>https://flowsynx.io</PackageProjectUrl>
 		<PackageTags>FlowSynx</PackageTags>
 		<PackageIcon>flowsynx.png</PackageIcon>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
