--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -1,4 +1,4 @@
-name: Build the project, create nuget package, and create release and tag
+name: Publish NuGet
 
 on:      
   workflow_dispatch:
@@ -60,12 +60,3 @@ jobs:
 
     - name: Push package to GitHub packages 
       run: dotnet nuget push **/*.nupkg --api-key ${{secrets.NUGET_PACKAGE_TOKEN}} --source https://api.nuget.org/v3/index.json
-
-    #Create release
-    - name: Create Release
-      uses: ncipollo/release-action@v1
-      with:
-        tag: ${{inputs.rel_version}}
-        name: v${{inputs.rel_version}}
-        body: "This is the v${{inputs.rel_version}} release of FlowSynx C# SDK"
-        token: ${{secrets.GH_TOKEN}}
