--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -58,5 +58,5 @@ jobs:
       with:
         name: nugetPackage
 
-    - name: Push package to GitHub packages 
-      run: dotnet nuget push **/*.nupkg --api-key ${{secrets.NUGET_PACKAGE_TOKEN}} --source https://api.nuget.org/v3/index.json
+    - name: Push package to Nuget packages 
+      run: dotnet nuget push **/*.nupkg --api-key ${{secrets.NUGET_TOKEN}} --source https://api.nuget.org/v3/index.json
