--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Create the package
       run: dotnet pack --configuration Release /p:Version='${{ inputs.rel_version }}' --no-build
 
-    - name: Upload NuGet package to nuget.org
+    - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: nugetPackage
@@ -53,7 +53,7 @@ jobs:
     
     steps:  
     #Push NuGet package to GitHub packages
-    - name: Download nuget package artifact
+    - name: Download artifact
       uses: actions/download-artifact@v4
       with:
         name: nugetPackage
