--- a/Samples/Client/Client.csproj
+++ b/Samples/Client/Client.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\src\FlowSynx.Client\FlowSynx.Client.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
