--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v3.2.0
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 9.0.200
+        dotnet-version: 10.0.x
 
     - name: Build
       run: dotnet build --configuration Release
